--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,6 @@ build-backend = "setuptools.build_meta"
 name = "milib-ejemplo"
 version = "0.0.1"
 description = "Una librería de prueba para Nexus"
-authors = [{ name = "Tu Nombre", email = "tuemail@ejemplo.com" }]
+authors = [{ name = "David Moreno", email = "davmorenoga@ejemplo.com" }]
 requires-python = ">=3.6"
 dependencies = []
