--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -24,5 +24,5 @@ jobs:
           NEXUS_PASSWORD: ${{ secrets.NEXUS_PASSWORD }}
         run: |
           pip install milib-ejemplo \
-            --index-url http://${NEXUS_USERNAME}:${NEXUS_PASSWORD}@http://ec2-54-234-135-100.compute-1.amazonaws.com:8081/repository/example/simple/ \
+            --index-url http://${NEXUS_USERNAME}:${NEXUS_PASSWORD}@ec2-54-234-135-100.compute-1.amazonaws.com:8081/repository/example/simple/ \
             --trusted-host ec2-54-234-135-100.compute-1.amazonaws.com
